--- a/package.json
+++ b/package.json
@@ -260,6 +260,7 @@
     "https-proxy-agent": "^2.2.1",
     "markdown-it": "^8.4.1",
     "markdown-it-slack": "^1.2.0",
+    "mattermost-redux": "^5.10.0",
     "mixpanel": "^0.9.2",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.5",
