--- a/package.json
+++ b/package.json
@@ -238,6 +238,7 @@
     "vscode:prepublish": "npm run compile"
   },
   "devDependencies": {
+    "@types/core-js": "^2.5.0",
     "@types/http-proxy-agent": "^2.0.0",
     "@types/keytar": "^4.0.1",
     "@types/markdown-it": "^0.0.7",
@@ -254,14 +255,17 @@
   },
   "dependencies": {
     "@slack/client": "^4.6.0",
+    "core-js": "^2.6.4",
     "discord.js": "^11.4.2",
     "emoji-js": "^3.4.1",
     "gravatar-api": "^1.5.0",
     "https-proxy-agent": "^2.2.1",
+    "isomorphic-fetch": "^2.2.1",
     "markdown-it": "^8.4.1",
     "markdown-it-slack": "^1.2.0",
     "mattermost-redux": "^5.10.0",
     "mixpanel": "^0.9.2",
+    "regenerator-runtime": "^0.13.2",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.5",
     "semver": "^5.5.1",
