:wrench: WIP: * Enable configuration of server url * Distinguish channels * Resolve dm channel names

--- a/package.json
+++ b/package.json
@@ -110,6 +110,11 @@
         "category": "Chat"
       },
       {
+        "command": "extension.chat.updateMattermostUrl",
+        "title": "Update Mattermost Sever URL",
+        "category": "Chat"
+      },
+      {
         "command": "extension.chat.updateSelfPresence",
         "title": "Update your presence status",
         "category": "Chat"
